Added description in html

--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,11 @@
         Unit testing frameworks like Enzyme/Jest can also be used with React Applications.
     </p>
 
+    <p>
+        With React the sorting thing and reordering would automatically be handled in an efficient way as whenever we update the state in an immutable way it will automatically detect the changes.
+    </p>
+
+
 </section>
 
 <!-- Code you write in index.js and anything it depends on will be bundled into bundle.js and
